<resources>
    <string name="app_name">Первая попытка</string>
    <string name="start_button">Установить</string>
    <string name="stop_button">Остановить</string>
    <string name="all_jobs_cancelled">Все задачи отменены</string>
    <string name="monday">ПН</string>
    <string name="tuesday">ВТ</string>
    <string name="wensday">СР</string>
    <string name="thursday">ЧТ</string>
    <string name="friday">ПТ</string>
    <string name="saturday">СБ</string>
    <string name="sunday">ВС</string>
    <string name="stop_alarm">Прекратить</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
