<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlarmSetup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="7"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/checkmonday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textOn="@string/monday"
            android:textOff="@string/monday"/>
        <ToggleButton
            android:id="@+id/checktuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textOn="@string/tuesday"
            android:textOff="@string/tuesday"/>
        <ToggleButton
            android:id="@+id/checkwensday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textOn="@string/wensday"
            android:textOff="@string/wensday"/>
        <ToggleButton
            android:id="@+id/checkthursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textOn="@string/thursday"
            android:textOff="@string/thursday"/>
        <ToggleButton
            android:id="@+id/checkfriday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textOn="@string/friday"
            android:textOff="@string/friday"/>
        <ToggleButton
            android:id="@+id/checksaturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textOn="@string/saturday"
            android:textOff="@string/saturday"/>
        <ToggleButton
            android:id="@+id/checksunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textOn="@string/sunday"
            android:textOff="@string/sunday"/>
    </LinearLayout>

    <LinearLayout
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_weight="3"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/start_stop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:textOff="@string/start_button"
            android:textOn="@string/stop_button"/>

    </LinearLayout>
</FrameLayout>
